--- a/docesquemaissaem.html
+++ b/docesquemaissaem.html
@@ -10,12 +10,36 @@
 <body>
     
     <h1>MENU</h1>
-    <H2>Página Inicial</H2>
-    <h2>Nossa História</h2>
-    <h2>Nossas Especiarias</h2>
-    <h3>Melhores Receitas</h3>
-    <h3>Doces Que Mais Saem</h3>
-    <h2>Fale Conosco</h2>
-    
+    <h2><a href="index.html" rel="prev">Página Inicial</a></h2>
+    <h2><a href="nossahistoria.html">Nossa História</a></h2>
+    <h2><a href="nossasespeciarias.html">Nossas Especiarias</a></h2>
+    <h3><a href="melhorreceita.html">Melhores Receitas</a></h3>
+    <h3><a href="docesquemaissaem.html" rel="next">Doces Que Mais Saem</a></h3>
+    <h2><a href="faleconosco.html">Fale Conosco</a></h2>
+
+    <h1>Dificil Escolher</h1>
+
+    <p>Foi muito dificil escolher somente esses três doces, mas como nada é fácil tá ai, nossas especialidades.</p>
+
+    <ol type="I">
+        <li>Bombom</li>
+        <ul type="disc">
+            <li>coco</li>
+            <li>Morango</li>
+        </ul>
+        <li>bolopote</li>
+        <ul type="disc">
+            <li>Chocolate</li>
+            <li>Morango</li>
+        </ul>
+        <li>sanduichebrownie</li>
+        <li>Fatiabolo</li>
+        <li>Brownie</li>
+    </ol>
+
+    <img src="galeria/bombom.jpg" alt="Bombom">
+    <img src="galeria/bolopotemorango.jpg" alt="Bolo de Pote de Morango">
+    <img src="galeria/sanduichebrownie.jpg" alt="Sanduiche de Brownie">
+
 </body>
 </html>
