--- a/faleconosco.html
+++ b/faleconosco.html
@@ -15,7 +15,7 @@
     <h2><a href="nossasespeciarias.html">Nossas Especiarias </a></h2>
     <h3><a href="melhorreceita.html">Melhores Receitas </a></h3>
     <h3><a href= "docesquemaissaem.html">Doces Que Mais Saem </a></h3>
-    <h2><a href = "faleconosco.html">Fale Conosco </a></h2>
+    <h2><a href = "faleconosco.html" rel="next">Fale Conosco </a></h2>
 
       <h1>Fale Conosco</h1>
 
