--- a/melhorreceita.html
+++ b/melhorreceita.html
@@ -10,12 +10,34 @@
 <body>
     
     <h1>MENU</h1>
-    <H2>Página Inicial</H2>
-    <h2>Nossa História</h2>
-    <h2>Nossas Especiarias</h2>
-    <h3>Melhores Receitas</h3>
-    <h3>Doces Que Mais Saem</h3>
-    <h2>Fale Conosco</h2>
+    <h2><a href="index.html" rel="prev">Página Inicial</a></h2>
+    <h2><a href="nossahistoria.html">Nossa História</a></h2>
+    <h2><a href="nossasespeciarias.html">Nossas Especiarias</a></h2>
+    <h3><a href="melhorreceita.html" rel="next">Melhores Receitas</a></h3>
+    <h3><a href="docesquemaissaem.html">Doces Que Mais Saem</a></h3>
+    <h2><a href="faleconosco.html">Fale Conosco</a></h2>
+
+    <h1>Bolo de Cenoura</h1>
+
+    <h2>Ingredientes:</h2>
+    <ol type="1">
+        <li>2 copos de açucar</li>
+        <li>1 copo de oleo</li>
+        <li>3 ovos</li>
+        <li>3 cenouras</li>
+        <li>2 copos de farinha de trigo</li>
+        <li>1 colher de medida de fermento</li>
+    </ol>
+    <h2>Modo de Preparo:</h2>
+    <p> Coloque os ovos, a cenoura, o açucar e o oleo no liquidificador e deixe bater por aproximadamente 2 minutos.
+        Depois, em um refratario, acrescente a farinha de trigo aos poucos e va mexendo sempre, no final coloque o fermento.
+        Unte a forma com manteiga e farinha de trigo, despeje a massa e leve ao forno, asse por 40 minutos.
+        Essa é a melhor receita da vida. Só faça!
+    </p>
+
+    <img src="galeria/bolodecenoura.jpg" alt="Bolo de Cenoura">
+
+
 
 </body>
 </html>
