--- a/nossahistoria.html
+++ b/nossahistoria.html
@@ -10,21 +10,33 @@
 <body>
 
     <h1>MENU</h1>
-    <H2>Página Inicial</H2>
-    <h2>Nossa História</h2>
-    <h2>Nossas Especiarias</h2>
-    <h3>Melhores Receitas</h3>
-    <h3>Doces Que Mais Saem</h3>
-    <h2>Fale Conosco</h2>
+    <h2><a href="index.html">Página Inicial</a></h2>
+    <h2><a href="nossahistoria.html" rel="next">Nossa História</a></h2>
+    <h2><a href="nossasespeciarias.html">Nossas Especiarias</a></h2>
+    <h3><a href="melhorreceita.html">Melhores Receitas</a></h3>
+    <h3><a href="docesquemaissaem.html">Doces Que Mais Saem</a></h3>
+    <h2><a href="faleconosco.html">Fale Conosco</a></h2>
+
+    <h1>Como tudo começou</h1>
 
 
-    <p>Vamos ouvir uma musica para relaxar enquanto apreciam nossas guloseimas</p>
-    
-    <audio controls preload="metadata" loop>
-        <source src="midia/Evanescence - What You Wan.ogg.lnk" type="Evanescence/ogg">
-        <source src="midia/Evanescence - What You Want.mp3.lnk" type="Evanescence/mp3">
-        <source src="midia/Evanescence - What You Want.wav.lnk" type="Evanescence/wav">
-    </audio>
+    <p>Era uma vez...Não, nada disso, isso não é um conto de fadas, apesar de ter doces dignos de princesas e
+        principes!Mas, como na vida real nada vem com um toque de fada, vamos contar a realidade né!
+    </p>
+    <p>Mas, pensando bem, para que ficar enrolando contando uma istoria (sim gente, istoria com i, porque não é
+        nada tirado de um livro, é vida real, lembram), continuando, desculpe as vezes me perco nos pensamentos "kk"
+        Tá, vou resumir.
+    </p>
+    <p>Por necessidade financeira e por ter acabado de me mudar para outra cidade resolvi, testar vender algo
+        e como um bolo é uma coisa mais facil (ta bom, pra mim, talvez pra você nao)enfim, eu tive a facilidade de fazer
+        um bolo e ai, vi uma novidade que estava em alta, Bolos recheados dentro de um pote, fiz recheios, montei, e dei
+        para a familia provar. Sabores aprovados, sai para vender nas lojas. E olha que legal, foi um sucesso. E hoje
+        estamos com muito mais delicias.E é assim, que tudo começou!Nada de muito grande, so muito amor pelo que fazemos.
+        Agora aprecie nossa vitrine e seja muito bem vindo!
+    </p>
+
+
+    <img src="galeria/cozinha.jpg" alt="Cozinha">
 
 </body>
 </html>
