--- a/faleconosco.html
+++ b/faleconosco.html
@@ -29,9 +29,9 @@
 
       <p>Queremos saber mais sobre você, responde ai!</p>
 
-    <formulário>
+    <form>
         <classe div = "campos">
-            <legenda> Cadastro </legenda>
+            <legend> Cadastro </legend>
             <p><label for="idSeuNome"> Seu Nome: </label>
             <input type="text" name="nSeuNome" id="idSeuNome" size=" 40 " placeholder="Nome Completo"> </p>
             <p><label for="idSeuEmail"> Seu Email: </label>
@@ -44,7 +44,7 @@
 
         
          <classe div="campo">
-            <legenda> Agora vamos saber o quão viciado em doces vc é!</legenda>
+            <legend> Agora vamos saber o quão viciado em doces vc é!</legend>
             <label> Qual seu sabor favorito? </label>
             <br>
             <input type="radio" name="doces" id="idBrigdadeiro">
@@ -89,12 +89,12 @@
             </fieldset> 
             <br>
             <br> 
-            <label>Gostou do nosso site?Qual nota você nos dá?!</label><br><input type="numero" min="0" max="10"> 
+            <label>Gostou do nosso site?Qual nota você nos dá?!</label><br><input type="number" min="0" max="10"> 
             <br>
             <br>                                                            
         </fieldset>
         <classe div="campos">
-            <legenda> Agora, nos dê sua opinião: </legenda>
+            <legend> Agora, nos dê sua opinião: </legend>
             <label>Gostou do nosso site?Escreve ai! </label>
             <br>
             <tipo de entrada=" intervalo " min=" 1 " max=" 10 ">
@@ -102,7 +102,7 @@
             <textarea type="text" cols="50" rows="10" placeholder="Escreva aqui o que achou"> </textarea>
             <br>
             </fieldset>
-       </formulário>
+       </form>
 
 </body>
 </html>
