--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<cabeca> 
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divina Gula</title>
     <link rel="shortcut icon" href="galeria/favicon.ico"type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-</cabeca>
-<corpo>
+</head>
+<body>
 
     <h1>MENU</h1>
     <h2><a href="index.html" rel="next">Página Inicial</a></h2>
@@ -28,10 +28,17 @@
     <h3>Nossa vitrini linda e Doce!</h3>
 
          <picture>
-            
             <img src="galeria/vitrini.jpg" alt="vitrini">
-            
         </picture>
 
-    </corpo>
+        <p>Uma musica é sempre bem vinda, né? </p>
+
+        <audio controls preload="Evanescence" loop>
+            <source src="midia/Evanescence - What You Want.mp3.lnk" type="audio/mpeg">
+            <source src="midia/Evanescence - What You Wan.ogg.lnk" type="audio/ogg">
+            <source src="midia/Evanescence - What You Want.wav.lnk" type="audio/wav">
+            <p>Audio não compatível!</p>
+        </audio>
+
+    </body>
 </html>
