--- a/docesquemaissaem.html
+++ b/docesquemaissaem.html
@@ -9,37 +9,61 @@
 </head>
 <body>
     
-    <h1>MENU</h1>
-    <h2><a href="index.html" rel="prev">Página Inicial</a></h2>
-    <h2><a href="nossahistoria.html">Nossa História</a></h2>
-    <h2><a href="nossasespeciarias.html">Nossas Especiarias</a></h2>
-    <h3><a href="melhorreceita.html">Melhores Receitas</a></h3>
-    <h3><a href="docesquemaissaem.html" rel="next">Doces Que Mais Saem</a></h3>
-    <h2><a href="faleconosco.html">Fale Conosco</a></h2>
+    <nav class="menu">
+    <a href="index.html" rel="prev">Página Inicial</a>
+    <a href="nossahistoria.html">Nossa História</a>
+    <a href="nossasespeciarias.html">Nossas Especiarias</a>
+    <a href="melhorreceita.html">Melhores Receitas</a>
+    <a href="docesquemaissaem.html" rel="next">Doces Que Mais Saem</a>
+    <a href="faleconosco.html">Fale Conosco</a>
+    </nav>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <main>
 
     <h1>Dificil Escolher</h1>
+    <br>
+    <br>
 
-    <p>Foi muito dificil escolher somente esses três doces, mas como nada é fácil tá ai, nossas especialidades.</p>
+    <p>Foi muito dificil escolher somente esses doces, mas como nada é fácil tá ai, nossas especialidades.</p>
 
-    <ol type="I">
-        <li>Bombom</li>
-        <ul type="disc">
+    <br>
+    
+
+    <ol>
+            <h3>Bombom</h3>
+        <ul>
             <li>coco</li>
             <li>Morango</li>
+            <img src="galeria/bombom.jpg" alt="Bombom">
         </ul>
-        <li>bolopote</li>
-        <ul type="disc">
+        <br>
+
+            <h3>Bolopote</h3>
+        <ul>
             <li>Chocolate</li>
             <li>Morango</li>
+            <img src="galeria/bolopotemorango.jpg" alt="Bolo de Pote de Morango">
         </ul>
-        <li>sanduichebrownie</li>
-        <li>Fatiabolo</li>
-        <li>Brownie</li>
-    </ol>
+        <br>
+            <ul>
+            <h3>Sanduiche de Brownie</h3>
+            <li>Brownie</li>
+        <img src="galeria/sanduichebrownie.jpg" alt="Sanduiche de Brownie">
+        </ul>
+        <br>
+        <ul>
+            <h3>Fatia de Bolo</h3>
+            <li>Bolo de Creme</li>
+            <img src="galeria/fatiabolo.jpg" alt="Fatia de Bolo">
+        </ul>
+        </ol>
 
-    <img src="galeria/bombom.jpg" alt="Bombom">
-    <img src="galeria/bolopotemorango.jpg" alt="Bolo de Pote de Morango">
-    <img src="galeria/sanduichebrownie.jpg" alt="Sanduiche de Brownie">
+        </main>
 
-</body>
+    </body>
 </html>
