--- a/faleconosco.html
+++ b/faleconosco.html
@@ -11,13 +11,21 @@
 
 <body>
 
-    <h1>MENU</h1>
-    <h2><a href="index.html" rel="prev">Pagina Inicial </a></H2>
-    <h2><a href="nossahistoria.html">Nossa História </a></h2>
-    <h2><a href="nossasespeciarias.html">Nossas Especiarias </a></h2>
-    <h3><a href="melhorreceita.html">Melhores Receitas </a></h3>
-    <h3><a href="docesquemaissaem.html">Doces Que Mais Saem </a></h3>
-    <h2><a href="faleconosco.html" rel="next">Fale Conosco </a></h2>
+    <nav class="menu">
+    <a href="index.html" rel="prev">Pagina Inicial </a>
+    <a href="nossahistoria.html">Nossa História </a>
+    <a href="nossasespeciarias.html">Nossas Especiarias </a>
+    <a href="melhorreceita.html">Melhores Receitas </a>
+    <a href="docesquemaissaem.html">Doces Que Mais Saem </a>
+    <a href="faleconosco.html" rel="next">Fale Conosco </a>
+    </nav>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <main>
 
     <h1>Fale Conosco</h1>
 
@@ -27,9 +35,11 @@
     <h2>Instagram</h2>
     <p>@DivinaGula</p>
 
-    <br>--
+    <br>
 
-    <p>Queremos saber mais sobre você, responde ai!</p>
+
+
+    <h1>Queremos saber mais sobre você, responde ai!</h1>
 
     <form>
         <fieldset>
@@ -50,7 +60,7 @@
         <br>
         <fieldset>
 
-            <legend>Agora vamos saber o quão viciado em doces vc é!</legend>
+            <h2>Agora vamos saber o quão viciado em doces vc é!</h2>
             <label>Qual seu sabor favorito?</label>
             <br>
             <input type="radio" name="doces" id="idBrigdadeiro">
@@ -98,8 +108,6 @@
             <br>
             <br>
 
-
-            <legend>Agora, nos dê sua opinião:</legend>
             <label>Gostou do nosso site?Escreve ai! </label>
             <br>
 
@@ -107,6 +115,8 @@
             <br>
         </fieldset>
     </form>
+   
+    </main>
 
 </body>
 
