--- a/melhorreceita.html
+++ b/melhorreceita.html
@@ -9,15 +9,25 @@
 </head>
 <body>
     
-    <h1>MENU</h1>
-    <h2><a href="index.html" rel="prev">Página Inicial</a></h2>
-    <h2><a href="nossahistoria.html">Nossa História</a></h2>
-    <h2><a href="nossasespeciarias.html">Nossas Especiarias</a></h2>
-    <h3><a href="melhorreceita.html" rel="next">Melhores Receitas</a></h3>
-    <h3><a href="docesquemaissaem.html">Doces Que Mais Saem</a></h3>
-    <h2><a href="faleconosco.html">Fale Conosco</a></h2>
+   <nav class="menu">
+    <a href="index.html" rel="prev">Página Inicial</a>
+    <a href="nossahistoria.html">Nossa História</a>
+    <a href="nossasespeciarias.html">Nossas Especiarias</a>
+    <a href="melhorreceita.html" rel="next">Melhores Receitas</a>
+    <a href="docesquemaissaem.html">Doces Que Mais Saem</a>
+    <a href="faleconosco.html">Fale Conosco</a>
+
+   </nav>
+   <br>
+   <br>
+   <br>
+
+   <main>
 
     <h1>Bolo de Cenoura</h1>
+
+    <br>
+    <br>
 
     <h2>Ingredientes:</h2>
     <ol type="1">
@@ -29,6 +39,8 @@
         <li>1 colher de medida de fermento</li>
     </ol>
     <h2>Modo de Preparo:</h2>
+    <br>
+    <br>
     <p> Coloque os ovos, a cenoura, o açucar e o oleo no liquidificador e deixe bater por aproximadamente 2 minutos.
         Depois, em um refratario, acrescente a farinha de trigo aos poucos e va mexendo sempre, no final coloque o fermento.
         Unte a forma com manteiga e farinha de trigo, despeje a massa e leve ao forno, asse por 40 minutos.
@@ -36,6 +48,8 @@
     </p>
 
     <img src="galeria/bolodecenoura.jpg" alt="Bolo de Cenoura">
+
+   </main>
 
 
 
