--- a/nossahistoria.html
+++ b/nossahistoria.html
@@ -9,15 +9,26 @@
 </head>
 <body>
 
-    <h1>MENU</h1>
-    <h2><a href="index.html">Página Inicial</a></h2>
-    <h2><a href="nossahistoria.html" rel="next">Nossa História</a></h2>
-    <h2><a href="nossasespeciarias.html">Nossas Especiarias</a></h2>
-    <h3><a href="melhorreceita.html">Melhores Receitas</a></h3>
-    <h3><a href="docesquemaissaem.html">Doces Que Mais Saem</a></h3>
-    <h2><a href="faleconosco.html">Fale Conosco</a></h2>
+    <nav class="menu">
+    <a href="index.html">Página Inicial</a>
+    <a href="nossahistoria.html" rel="next">Nossa História</a>
+    <a href="nossasespeciarias.html">Nossas Especiarias</a>
+    <a href="melhorreceita.html">Melhores Receitas</a>
+    <a href="docesquemaissaem.html">Doces Que Mais Saem</a>
+    <a href="faleconosco.html">Fale Conosco</a>
+
+    </nav>
+    <br>
+    <br>
+    
+    
+
+    <main>
 
     <h1>Como tudo começou</h1>
+
+    <br>
+    <br>
 
 
     <p>Era uma vez...Não, nada disso, isso não é um conto de fadas, apesar de ter doces dignos de princesas e
@@ -37,6 +48,8 @@
 
 
     <img src="galeria/cozinha.jpg" alt="Cozinha">
+
+    </main>
 
 </body>
 </html>
